# rez-library

./: .cursorignore  .gitignore  .project  README.md  rez-library.code-workspace
alembic/: CMakeLists.txt  package.py
boost/: CMakeLists.txt  package.py  user-config.jam  user-config.jam.in
boost/cmake/: FindBoost.cmake
clang/: CMakeLists.txt  package.py
cmake/: CMakeLists.txt  package.py
embree/: CMakeLists.txt  package.py
glew/: CMakeLists.txt  package.py
glfw/: CMakeLists.txt  package.py
glm/: CMakeLists.txt  package.py
imath/: CMakeLists.txt  package.py
imgui/: CMakeLists.txt  package.py
oidn/: CMakeLists.txt  package.py
openImageIO/: CMakeLists.txt  package.py
openexr/: CMakeLists.txt  package.py
opensubdiv/: CMakeLists.txt  package.py
os/osx-13/: CMakeLists.txt  package.py
os/osx-15.2/: package.py
pybind11/: CMakeLists.txt  package.py
python/: CMakeLists.txt  package.py  requirements.txt 
python_extra/: CMakeLists.txt  package.py
qt/6.5.3/: CMakeLists.txt  package.py
shiboken/: CMakeLists.txt  package.py
tbb/: CMakeLists.txt  package.py
tbb/cmake/: FindTBB.cmake
test/: CMakeLists.txt  package.py
test/src/: CMakeLists.txt  main.cpp  usd.cpp
test/src/moduleBinding/: CMakeLists.txt
test/src/widgetbinding/: CMakeLists.txt  main.py
tximistaEditor/: CMakeLists.txt  package.py
usd/: .gitignore
usd/24.03/: CMakeLists.txt  package.py
usd/24.08/: CMakeLists.txt  package.py
