CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
project(usd)

include(ExternalProject)

ExternalProject_Add(
    usd
    URL https://github.com/PixarAnimationStudios/USD/archive/v24.08.tar.gz
    SOURCE_DIR src
    PATCH_COMMAND ""
    UPDATE_COMMAND ""
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
    -DBOOST_ROOT=$ENV{REZ_BOOST_ROOT}
    -DTBB_ROOT_DIR=$ENV{REZ_TBB_ROOT}
    -DPXR_ENABLE_OPENVDB_SUPPORT=FALSE
    -DPXR_OPENSUBDIV_SUPPORT=ON
    -DOPENSUBDIV_ROOT_DIR=$ENV{REZ_OPENSUBDIV_ROOT}
    -DPXR_ENABLE_OSL_SUPPORT=OFF
    -DPXR_ENABLE_PTEX_SUPPORT=OFF
    -DPXR_ENABLE_ALEMBIC_SUPPORT=OFF
    -DPXR_ENABLE_HDF5_SUPPORT=OFF
    -DPXR_ENABLE_MATERIALX_SUPPORT=OFF
    -DPXR_BUILD_TESTS=OFF
    -DPXR_BUILD_OPENIMAGEIO_PLUGIN=OFF
    -DPXR_BUILD_ALEMBIC_PLUGIN=OFF
    -DPXR_BUILD_EMBREE_PLUGIN=OFF
    -DPXR_BUILD_DOCUMENTATION=OFF
    -DPXR_BUILD_USD_TOOLS=OFF
    -DPXR_BUILD_TUTORIALS=OFF
    -DPXR_BUILD_IMAGING=ON
    -DPXR_BUILD_EMBREE_PLUGIN=ON
    -DOPENEXR_LOCATION=$ENV{REZ_OPENEXR_ROOT}/lib
    -DPython3_EXECUTABLE=$ENV{REZ_PYTHON_ROOT}/bin/python3
    -DPython3_LIBRARY=$ENV{REZ_PYTHON_ROOT}/lib/libpython3.11.dylib
    -DPython3_INCLUDE_DIR=$ENV{REZ_PYTHON_ROOT}/include/python3.11
    -DBUILD_SHARED_LIBS=ON
    -DBoost_NO_BOOST_CMAKE=On
    -DBoost_NO_SYSTEM_PATHS=True
    -DCMAKE_OSX_DEPLOYMENT_TARGET=15.2
    -DBOOST_PYTHON_VERSION=$ENV{REZ_PYTHON_VERSION}
    -DBoost_PYTHON_LIBRARY=$ENV{REZ_BOOST_ROOT}/lib/libboost_python311.dylib
    -DBoost_PYTHON_INCLUDE_DIR=$ENV{REZ_BOOST_ROOT}/include
    -DOPENSUBDIV_ROOT_DIR=$ENV{REZ_OPENSUBDIV_ROOT}
    INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/install
)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/install/ DESTINATION .)
